[gd_scene load_steps=15 format=3 uid="uid://drshnufabuq2w"]

[ext_resource type="Script" path="res://white_pikeman.gd" id="1_cuhbt"]
[ext_resource type="Texture2D" uid="uid://x0oee84jsik3" path="res://Assets/AllAssetsPreview.png" id="2_l3jmq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k8tp3"]
atlas = ExtResource("2_l3jmq")
region = Rect2(608, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_340c8"]
atlas = ExtResource("2_l3jmq")
region = Rect2(624, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jnj7"]
atlas = ExtResource("2_l3jmq")
region = Rect2(640, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lr0v"]
atlas = ExtResource("2_l3jmq")
region = Rect2(656, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qug1q"]
atlas = ExtResource("2_l3jmq")
region = Rect2(672, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooiab"]
atlas = ExtResource("2_l3jmq")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hflkv"]
atlas = ExtResource("2_l3jmq")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1vaq"]
atlas = ExtResource("2_l3jmq")
region = Rect2(224, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_toomd"]
atlas = ExtResource("2_l3jmq")
region = Rect2(240, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4fgi"]
atlas = ExtResource("2_l3jmq")
region = Rect2(256, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nigo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8tp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_340c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jnj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lr0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qug1q")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooiab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hflkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1vaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toomd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4fgi")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naowg"]
size = Vector2(16, 16)

[node name="white_pikeman" type="Area2D" groups=["active_pieces", "white_pieces"]]
script = ExtResource("1_cuhbt")

[node name="white_pikeman" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4nigo")
animation = &"front"
autoplay = "front"

[node name="white_pikeman_shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_naowg")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
